<resources>
    <string name="app_name">Maes</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="locate_me">Locate me</string>
    <string name="maturity">Maturity</string>
    <string name="drought_resistant">Drought resistant</string>
    <string name="results">Results</string>
    <string name="altitude">Altitude:</string>
    <string name="location_info">Location</string>
</resources>
